--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <div class="world" data-world>
-        <div class="score" data-score>0</div>
         <img src="imgs/sky1.png" alt="" class="sky" data-sky>
         <img src="imgs/sky2.png" alt="" class="sky" data-sky>
         <img src="imgs/mountain.png" alt="" class="mountain" data-mountain>
@@ -20,10 +19,11 @@
         <img src="imgs/ground3.png" alt="" class="ground" data-ground>
         <img src="imgs/ground3.png" alt="" class="ground" data-ground>
         <img src="imgs/panda-stationary.png" alt="" class="panda" data-dino>
+        <div class="score" data-score>0</div>
         <div class="start-screen" data-start-screen>
             <p>Press Any Key To Start</p>
             <p>Best Score</p> 
-            <div class="best-score" data-best-score></div>
+            <div class="best-score" data-best-score>0</div>
         </div>
 
 
